# seeed-money

./: .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/workflows/: bulid.yml  checks.yml  deploy.yml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_balance.py
analysis/: analyzers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_remove_analysis_period_type_and_more.py  0003_analysis_period_type.py
config/: __init__.py  celery.py  settings.py  urls.py
notifications/: models.py  serializers.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
scripts/: run.sh
transactions/: models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_amount_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
